<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d9d7d7"
            android:padding="@dimen/activity_vertical_margin">

            <Button
                android:id="@+id/btn_enable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:text="@string/text_enable_bluetooth" />

            <Button
                android:id="@+id/btn_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/text_connect" />

            <Spinner
                android:id="@+id/sp_device"
                android:layout_toLeftOf="@+id/btn_connect"
                android:layout_alignBottom="@+id/btn_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"/>

        </RelativeLayout>

        <TextView
            android:layout_marginTop="25px"
            android:id="@+id/role_label"
            android:text="Pengunjung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/jenis_pengunjung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/Pengunjung1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pengunjung1"
                />

            <RadioButton
                android:id="@+id/Pengunjung2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pengunjung2" />

        </RadioGroup>

        <!--Spinner
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:id="@+id/role" / -->

        <TextView
            android:id="@+id/kendaraan_label"
            android:text="Kendaraan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/kendaraan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/Kendaraan1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_vehicle1"
                />

            <RadioButton
                android:id="@+id/Kendaraan2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_vehicle2" />

        </RadioGroup>

        <TextView
            android:id="@+id/pengunjung_label"
            android:text="Jumlah Orang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/jumlah_orang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/price_label"
            android:text="Total Harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <!--TextView
            android:id="@+id/spnama_label"
            android:text="Nama Storage Point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/spnama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/password_label"
            android:text="Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password" />

        <TextView
            android:id="@+id/namadepan_label"
            android:text="Nama Depan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/namadepan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/namabelakang_label"
            android:text="Nama Belakang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/namabelakang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/gender_label"
            android:text="Jenis Kelamin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/gender_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/gender1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender1"
                android:checked="true" />

            <RadioButton
                android:id="@+id/gender2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender2" />

        </RadioGroup>

        <TextView
            android:id="@+id/tgl_label"
            android:text="Tanggal Lahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/spalamat_label"
            android:text="Alamat Storage Point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/spalamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/prov_label"
            android:text="Provinsi Storage Point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/prov"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/kokab_label"
            android:text="Kota/Kabupaten Storage Point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/kokab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/spidpic_label"
            android:text="Nomor KTP Pemilik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/spidpic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:id="@+id/sppic_label"
            android:text="Pemilik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/sppic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/sptel_label"
            android:text="Telepon Storage Point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/sptel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" /-->

        <Button
            android:id="@+id/cetakTiket"
            android:text="Cetak Tiket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Colored" />

        <!--View
            android:layout_width="1000dp"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray"/>

        <Button
            android:id="@+id/loginLinkBtn"
            android:text="Kembali"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" /-->

    </LinearLayout>

</ScrollView>